# rqmt

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json  tsconfig.json
client/scripts/: extension.ts
docs/: grammar.md  language.md  specification.rqmt
scripts/: esbuild.js  release.py
server/src/: CMakeLists.txt  rqmt.cpp
server/src/cpp_parser/: CMakeLists.txt  cpp_ast_merger.cpp  cpp_ast_merger.h  cpp_attribute_definitions.cpp  cpp_attribute_definitions.h  cpp_diagnostic_definitions.cpp  cpp_diagnostic_definitions.h  cpp_parser.cpp  cpp_parser.h  cpp_parser_util.cpp  cpp_parser_util.h  cpp_semantic_token_definitions.cpp  cpp_semantic_token_definitions.h  cpp_syntax_definitions.cpp  cpp_syntax_definitions.h
server/src/lsp/: CMakeLists.txt  capabilities_registry.h  dispatcher.cpp  dispatcher.h  lsp.cpp  lsp.h  lsp_util.cpp  lsp_util.h
server/src/scripts/: bump_version.py
server/src/tokenizer/: CMakeLists.txt  c_token_definitions.c  c_token_definitions.h  c_tokenizer.c  c_tokenizer.h
server/src/util/: CMakeLists.txt  cpp_util.cpp  cpp_util.h  errors.c  errors.h  list.c  list.h  util.c  util.h  version.h
server/src/workspace/: CMakeLists.txt  c_rqmtfile.cpp  c_rqmtfile.hpp  logger.cpp  logger.h  logger.tpp  rqmtfile.cpp  rqmtfile.hpp  workspace.cpp  workspace.h
syntaxes/: RQMT.tmLanguage.json
